// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Video> renders 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "alignSelf": "center",
        "justifyContent": "center",
        "overflow": "hidden",
      },
      Object {
        "height": 180,
        "maxHeight": 180,
        "maxWidth": 320,
        "width": 320,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTWebView
      allowsInlineMediaPlayback={true}
      mediaPlaybackRequiresUserAction={false}
      messagingEnabled={false}
      onLoadingError={[Function]}
      onLoadingFinish={[Function]}
      onLoadingStart={[Function]}
      onMessage={[Function]}
      scalesPageToFit={false}
      scrollEnabled={false}
      source={
        Object {
          "html": "<video
         
      height=\\"100%\\"
      playsinline
      preload=\\"true\\"
      src=\\"https://storage.googleapis.com/coverr-main/mp4/Surfers-Paradise.mp4\\"
      style=\\"object-fit: cover; background: #CDD2D4; position: absolute; left: 0; top: 0; margin: 0; padding: 0; overflow: hidden;\\"
      webkit-playsinline
      width=\\"100%\\"
    />",
        }
      }
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "backgroundColor": "#ffffff",
          },
          Array [
            Object {
              "backgroundColor": "#CDD2D4",
              "flex": 1,
              "overflow": "hidden",
            },
            Object {
              "height": 180,
              "maxHeight": 180,
              "maxWidth": 320,
              "width": 320,
            },
          ],
        ]
      }
    />
  </View>
</View>
`;

exports[`<Video> when {autoplay} 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "alignSelf": "center",
        "justifyContent": "center",
        "overflow": "hidden",
      },
      Object {
        "height": 180,
        "maxHeight": 180,
        "maxWidth": 320,
        "width": 320,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTWebView
      allowsInlineMediaPlayback={true}
      mediaPlaybackRequiresUserAction={false}
      messagingEnabled={false}
      onLoadingError={[Function]}
      onLoadingFinish={[Function]}
      onLoadingStart={[Function]}
      onMessage={[Function]}
      scalesPageToFit={false}
      scrollEnabled={false}
      source={
        Object {
          "html": "<video
         
      height=\\"100%\\"
      playsinline
      preload=\\"true\\"
      src=\\"https://storage.googleapis.com/coverr-main/mp4/Surfers-Paradise.mp4\\"
      style=\\"object-fit: cover; background: #CDD2D4; position: absolute; left: 0; top: 0; margin: 0; padding: 0; overflow: hidden;\\"
      webkit-playsinline
      width=\\"100%\\"
    />",
        }
      }
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "backgroundColor": "#ffffff",
          },
          Array [
            Object {
              "backgroundColor": "#CDD2D4",
              "flex": 1,
              "overflow": "hidden",
            },
            Object {
              "height": 180,
              "maxHeight": 180,
              "maxWidth": 320,
              "width": 320,
            },
          ],
        ]
      }
    />
  </View>
</View>
`;

exports[`<Video> when {controls} 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "alignSelf": "center",
        "justifyContent": "center",
        "overflow": "hidden",
      },
      Object {
        "height": 180,
        "maxHeight": 180,
        "maxWidth": 320,
        "width": 320,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTWebView
      allowsInlineMediaPlayback={true}
      mediaPlaybackRequiresUserAction={false}
      messagingEnabled={false}
      onLoadingError={[Function]}
      onLoadingFinish={[Function]}
      onLoadingStart={[Function]}
      onMessage={[Function]}
      scalesPageToFit={false}
      scrollEnabled={false}
      source={
        Object {
          "html": "<video
       controls  
      height=\\"100%\\"
      playsinline
      preload=\\"true\\"
      src=\\"https://storage.googleapis.com/coverr-main/mp4/Surfers-Paradise.mp4\\"
      style=\\"object-fit: cover; background: #CDD2D4; position: absolute; left: 0; top: 0; margin: 0; padding: 0; overflow: hidden;\\"
      webkit-playsinline
      width=\\"100%\\"
    />",
        }
      }
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "backgroundColor": "#ffffff",
          },
          Array [
            Object {
              "backgroundColor": "#CDD2D4",
              "flex": 1,
              "overflow": "hidden",
            },
            Object {
              "height": 180,
              "maxHeight": 180,
              "maxWidth": 320,
              "width": 320,
            },
          ],
        ]
      }
    />
  </View>
</View>
`;

exports[`<Video> when {dimensions} 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "alignSelf": "center",
        "justifyContent": "center",
        "overflow": "hidden",
      },
      Object {
        "height": 128,
        "maxHeight": 128,
        "maxWidth": 256,
        "width": 256,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTWebView
      allowsInlineMediaPlayback={true}
      mediaPlaybackRequiresUserAction={false}
      messagingEnabled={false}
      onLoadingError={[Function]}
      onLoadingFinish={[Function]}
      onLoadingStart={[Function]}
      onMessage={[Function]}
      scalesPageToFit={false}
      scrollEnabled={false}
      source={
        Object {
          "html": "<video
         
      height=\\"100%\\"
      playsinline
      preload=\\"true\\"
      src=\\"https://storage.googleapis.com/coverr-main/mp4/Surfers-Paradise.mp4\\"
      style=\\"object-fit: cover; background: #CDD2D4; position: absolute; left: 0; top: 0; margin: 0; padding: 0; overflow: hidden;\\"
      webkit-playsinline
      width=\\"100%\\"
    />",
        }
      }
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "backgroundColor": "#ffffff",
          },
          Array [
            Object {
              "backgroundColor": "#CDD2D4",
              "flex": 1,
              "overflow": "hidden",
            },
            Object {
              "height": 128,
              "maxHeight": 128,
              "maxWidth": 256,
              "width": 256,
            },
          ],
        ]
      }
    />
  </View>
</View>
`;

exports[`<Video> when {preload} 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "alignSelf": "center",
        "justifyContent": "center",
        "overflow": "hidden",
      },
      Object {
        "height": 180,
        "maxHeight": 180,
        "maxWidth": 320,
        "width": 320,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTWebView
      allowsInlineMediaPlayback={true}
      mediaPlaybackRequiresUserAction={false}
      messagingEnabled={false}
      onLoadingError={[Function]}
      onLoadingFinish={[Function]}
      onLoadingStart={[Function]}
      onMessage={[Function]}
      scalesPageToFit={false}
      scrollEnabled={false}
      source={
        Object {
          "html": "<video
         
      height=\\"100%\\"
      playsinline
      preload=\\"true\\"
      src=\\"https://storage.googleapis.com/coverr-main/mp4/Surfers-Paradise.mp4\\"
      style=\\"object-fit: cover; background: #CDD2D4; position: absolute; left: 0; top: 0; margin: 0; padding: 0; overflow: hidden;\\"
      webkit-playsinline
      width=\\"100%\\"
    />",
        }
      }
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "backgroundColor": "#ffffff",
          },
          Array [
            Object {
              "backgroundColor": "#CDD2D4",
              "flex": 1,
              "overflow": "hidden",
            },
            Object {
              "height": 180,
              "maxHeight": 180,
              "maxWidth": 320,
              "width": 320,
            },
          ],
        ]
      }
    />
  </View>
</View>
`;

exports[`<Video> when {source} (vimeo) 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "alignSelf": "center",
        "justifyContent": "center",
        "overflow": "hidden",
      },
      Object {
        "height": 180,
        "maxHeight": 180,
        "maxWidth": 320,
        "width": 320,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTWebView
      allowsInlineMediaPlayback={true}
      mediaPlaybackRequiresUserAction={false}
      messagingEnabled={false}
      onLoadingError={[Function]}
      onLoadingFinish={[Function]}
      onLoadingStart={[Function]}
      onMessage={[Function]}
      scalesPageToFit={false}
      scrollEnabled={false}
      source={
        Object {
          "html": "<iframe
      allowtransparency=\\"true\\"
      frameBorder=\\"0\\"
      src=\\"https://player.vimeo.com/video/225434434?title=0&byline=0&portrait=0&autoplay=0\\"
      height=\\"180\\"
      style=\\"background: transparent; position: absolute; left: 0; top: 0; margin: 0; padding: 0; overflow: hidden;\\"
      title=\\"https://player.vimeo.com/video/225434434?title=0&byline=0&portrait=0\\"
      width=\\"320\\"
    />",
        }
      }
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "backgroundColor": "#ffffff",
          },
          Array [
            Object {
              "backgroundColor": "#CDD2D4",
              "flex": 1,
              "overflow": "hidden",
            },
            Object {
              "height": 180,
              "maxHeight": 180,
              "maxWidth": 320,
              "width": 320,
            },
          ],
        ]
      }
    />
  </View>
</View>
`;

exports[`<Video> when {source} (youtube) 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "alignSelf": "center",
        "justifyContent": "center",
        "overflow": "hidden",
      },
      Object {
        "height": 180,
        "maxHeight": 180,
        "maxWidth": 320,
        "width": 320,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTWebView
      allowsInlineMediaPlayback={true}
      mediaPlaybackRequiresUserAction={false}
      messagingEnabled={false}
      onLoadingError={[Function]}
      onLoadingFinish={[Function]}
      onLoadingStart={[Function]}
      onMessage={[Function]}
      scalesPageToFit={false}
      scrollEnabled={false}
      source={
        Object {
          "html": "<iframe
      allowtransparency=\\"true\\"
      frameBorder=\\"0\\"
      src=\\"https://www.youtube.com/embed/cx4MxQcD8Fk?title=0&autoplay=0\\"
      height=\\"180\\"
      style=\\"background: transparent; position: absolute; left: 0; top: 0; margin: 0; padding: 0; overflow: hidden;\\"
      title=\\"https://www.youtube.com/embed/cx4MxQcD8Fk?title=0\\"
      width=\\"320\\"
    />",
        }
      }
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "backgroundColor": "#ffffff",
          },
          Array [
            Object {
              "backgroundColor": "#CDD2D4",
              "flex": 1,
              "overflow": "hidden",
            },
            Object {
              "height": 180,
              "maxHeight": 180,
              "maxWidth": 320,
              "width": 320,
            },
          ],
        ]
      }
    />
  </View>
</View>
`;

exports[`<Video> when {style} 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "alignSelf": "center",
        "justifyContent": "center",
        "overflow": "hidden",
      },
      Object {
        "height": 180,
        "maxHeight": 180,
        "maxWidth": 320,
        "width": 320,
      },
      Object {
        "height": 400,
        "width": 640,
      },
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTWebView
      allowsInlineMediaPlayback={true}
      mediaPlaybackRequiresUserAction={false}
      messagingEnabled={false}
      onLoadingError={[Function]}
      onLoadingFinish={[Function]}
      onLoadingStart={[Function]}
      onMessage={[Function]}
      scalesPageToFit={false}
      scrollEnabled={false}
      source={
        Object {
          "html": "<video
         
      height=\\"100%\\"
      playsinline
      preload=\\"true\\"
      src=\\"https://storage.googleapis.com/coverr-main/mp4/Surfers-Paradise.mp4\\"
      style=\\"object-fit: cover; background: #CDD2D4; position: absolute; left: 0; top: 0; margin: 0; padding: 0; overflow: hidden;\\"
      webkit-playsinline
      width=\\"100%\\"
    />",
        }
      }
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "backgroundColor": "#ffffff",
          },
          Array [
            Object {
              "backgroundColor": "#CDD2D4",
              "flex": 1,
              "overflow": "hidden",
            },
            Object {
              "height": 180,
              "maxHeight": 180,
              "maxWidth": 320,
              "width": 320,
            },
          ],
        ]
      }
    />
  </View>
</View>
`;
